Changes in version 0.0.15 - UNRELEASED:

Changes in version 0.0.14 - 2017-09-29:
 * Bug 8706: Fully disable the .recently-used.xbel.
 * Bug 22814: Revert the upstream fix by default.
 * Bug 23692: Add PR_SET_NO_NEW_PRIVS as an allowed prctl() operation.

Changes in version 0.0.13 - 2017-09-13:
 * Bug 13170: Disable the rest of the Firefox experiments botnet prefs.
 * Bug 23449: Allow `epool_pwait` in the tor seccomp rules.
 * Use lockPref for the IDN override done as part of #22984.
 * Unset the addon autoupdater URL prefs.
 * Disable the "Open with" dialog, which will never work.
 * Use the GCC constructor attribute for stub initialization.

Changes in version 0.0.12 - 2017-08-01:
 * Bug 22969: Disable the addon blocklist.
 * Bug 22984: Force IDNs to be displayed as punycode to thwart homograph
              attacks.
 * Bug 22967: Force disable crashdump reporting.
 * Bug 23058: Apply the SelfRando workaround to 7.5a3 as well.
 * Default disable `dom.securecontext.whitelist_onions`.

Changes in version 0.0.11 - 2017-07-18:
 * Bug 22910: Deprecate the volatile extension dir option.
 * Bug 22932: Add experimental Amnesiac Profile Directory support.

Changes in version 0.0.10 - 2017-07-12:
 * Bug 22829: Remove default obfs4 bridge riemann.
 * Bug 22853: Something in SelfRando is totally brain damaged.
 * Bug 22899: `about:addons`'s "Get Addons" pane is unsafe and should be
              treated as such.
 * Bug 22901: Clarify/expand on the warnings for all the config settings.

Changes in version 0.0.9 - 2017-07-03:
 * Bug 22712: Suppress ATK Bridge initialization which will never work.
 * Bug 20773: Stop mounting /proc in the Tor Browser container.
 * Fix the build being broken on Debian Jessie due to #22648.
 * Remove the undocumented command line options that enable unsafe behavior.

Changes in version 0.0.8 - 2017-06-19:
 * Bug 20776: Remove the X11 `MIT-SHM` workaround from the stub.
 * Bug 22470: Resync the bridges.