@@ -1,4 +1,5 @@
 Changes in version 0.0.15 - UNRELEASED:
+ * Bug 23915: 7.0.7 and later fails to work without `SECCOMP_FILTER_FLAG_TSYNC`.
 
 Changes in version 0.0.14 - 2017-09-29:
  * Bug 8706: Fully disable the .recently-used.xbel.
